# CodeTrail

./: .gitignore  LICENSE  README.md  package.json
client/: bun.lockb  package.json
client/src/: extension.ts  mermaid.ts  templates.ts  tsconfig.json
client/src/archive/: graph.html  mermaid.ts  test.ts  testInk.ts
contrail-site/: package-lock.json  package.json
data/alligator/: alligator.py  payload.json
data/complexity/: payload.json  sample_code.py
data/granular/: code.py  payload.json
server/: .env  generate.py  main.py  models.py  prompts.py  pyproject.toml  utils.py
